--- a/main.css
+++ b/main.css
@@ -72,3 +72,16 @@
     text-align: center;
     color:var(--lightgrey);
   }
+
+.todo-div-todo{
+    margin: auto;
+    width: 30%;
+    padding-top:3px;
+    padding-left:2px;
+    padding-right:2px;
+    padding-bottom:3px;
+    color:var(--lightgrey);
+    font-family: 'Montserrat', sans-serif;
+    background-color:#414652;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  }
