enter trigger to create a div for each 'todo'

--- a/main.css
+++ b/main.css
@@ -76,12 +76,14 @@
 .todo-div-todo{
     margin: auto;
     width: 30%;
-    padding-top:3px;
+    padding-top:5px;
     padding-left:2px;
     padding-right:2px;
-    padding-bottom:3px;
+    padding-bottom:5px;
     color:var(--lightgrey);
     font-family: 'Montserrat', sans-serif;
     background-color:#414652;
+    border-bottom-left-radius:5px;
+    border-bottom-right-radius:5px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   }
